--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='fonts/font-awesome.min.css') }}">
     <link rel="stylesheet" href="https://daneden.github.io/animate.css/animate.min.css">
-    <link rel="stylesheet" href="assets/css/Pricing-Table-Style-01.css">
-    <link rel="stylesheet" href="assets/css/Pricing-Table-Style-011.css">
-    <link rel="stylesheet" href="assets/css/Pricing-Tables.css">
-    <link rel="stylesheet" href="assets/css/Pricing-Tables1.css">
-    <link rel="stylesheet" href="assets/css/user.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/Pricing-Table-Style-01.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/Pricing-Table-Style-011.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/Pricing-Tables.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/Pricing-Tables1.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/user.css') }}">
 </head>
 
 <body style="background-color:rgb(51,51,51);">
@@ -24,7 +24,7 @@
                 <div class="col-md-4 col-sm-4">
                     <div class="pricingTable purple">
                         <div class="pricingTable-header">
-                            <h3>UDACITY </h3><span style="padding-bottom:10px;">Lorem Ipsum</span><img src="assets/img/udacity_share-46db4b8faf075a5af5a1070a7fa0ad3639783609ff45f447e4ea467fe3aa9d32.png" style="width:270px;"></div>
+                            <h3>UDACITY </h3><span style="padding-bottom:10px;">Lorem Ipsum</span><img src="{{ url_for('static', filename='img/udacity_share-46db4b8faf075a5af5a1070a7fa0ad3639783609ff45f447e4ea467fe3aa9d32.png') }}" style="width:270px;"></div>
                         <div class="pricing-plans"><span class="price-value"><span>Explore More</span></span>
                         </div>
                         <div class="pricingContent"></div>
@@ -34,7 +34,7 @@
                 <div class="col-md-4 col-sm-4">
                     <div class="pricingTable green">
                         <div class="pricingTable-header">
-                            <h3>HACKERRANK </h3><span style="padding-bottom:10px;">Lorem Ipsum</span><img src="assets/img/udacity_share-46db4b8faf075a5af5a1070a7fa0ad3639783609ff45f447e4ea467fe3aa9d32.png" style="width:270px;"></div>
+                            <h3>HACKERRANK </h3><span style="padding-bottom:10px;">Lorem Ipsum</span><img src="{{ url_for('static', filename='img/udacity_share-46db4b8faf075a5af5a1070a7fa0ad3639783609ff45f447e4ea467fe3aa9d32.png') }}" style="width:270px;"></div>
                         <div class="pricing-plans"><span class="price-value"><i class="fa fa-usd"></i><span>10 </span></span><span class="month">/month </span></div>
                         <div class="pricingContent">
                             <ul></ul>
@@ -45,7 +45,7 @@
                 <div class="col-md-4 col-sm-4">
                     <div class="pricingTable yellow">
                         <div class="pricingTable-header">
-                            <h3>COURSERA </h3><span style="padding-bottom:10px;">Lorem Ipsum</span><img src="assets/img/udacity_share-46db4b8faf075a5af5a1070a7fa0ad3639783609ff45f447e4ea467fe3aa9d32.png" style="width:270px;"></div>
+                            <h3>COURSERA </h3><span style="padding-bottom:10px;">Lorem Ipsum</span><img src="{{ url_for('static', filename='img/udacity_share-46db4b8faf075a5af5a1070a7fa0ad3639783609ff45f447e4ea467fe3aa9d32.png') }}" style="width:270px;"></div>
                         <div class="pricing-plans"><span class="price-value"><i class="fa fa-usd"></i><span>10 </span></span><span class="month">/month </span></div>
                         <div class="pricingContent"></div>
                         <div class="pricingTable-sign-up"><a href="#" class="btn btn-block" style="background-color:#6d8de1;">Link</a></div>
